--- a/src/main/java/com/epiis/app/presentation/FrmPersonInsert.form
+++ b/src/main/java/com/epiis/app/presentation/FrmPersonInsert.form
@@ -52,13 +52,11 @@
                           </Group>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" attributes="0">
-                              <Component id="lblBirthDate" min="-2" pref="180" max="-2" attributes="0"/>
-                              <EmptySpace min="0" pref="2" max="32767" attributes="0"/>
-                          </Group>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="lblBirthDate" pref="180" max="32767" attributes="0"/>
                           <Component id="dateBirthDate" max="32767" attributes="0"/>
                       </Group>
+                      <EmptySpace min="0" pref="2" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
                       <Component id="btnClose" min="-2" pref="180" max="-2" attributes="0"/>
@@ -81,12 +79,14 @@
                   <Component id="lblBirthDate" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="txtFirstName" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="txtSurName" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="dateBirthDate" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="radioMale" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="radioFemale" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="txtFirstName" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="txtSurName" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="radioMale" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="radioFemale" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <Component id="dateBirthDate" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jSeparator1" min="-2" pref="10" max="-2" attributes="0"/>
@@ -125,13 +125,12 @@
     </Component>
     <Component class="javax.swing.JTextField" name="txtSurName">
     </Component>
-    <Component class="javax.swing.JTextField" name="dateBirthDate">
-    </Component>
     <Component class="javax.swing.JRadioButton" name="radioMale">
       <Properties>
         <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
           <ComponentRef name="bgGender"/>
         </Property>
+        <Property name="selected" type="boolean" value="true"/>
         <Property name="text" type="java.lang.String" value="Masculino"/>
       </Properties>
     </Component>
@@ -157,6 +156,8 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Cerrar ventana"/>
       </Properties>
+    </Component>
+    <Component class="com.toedter.calendar.JDateChooser" name="dateBirthDate">
     </Component>
   </SubComponents>
 </Form>
